Set stretchy correctly, w/o trying to work around browsers bugs.

--- a/site/docs/docStyles.css
+++ b/site/docs/docStyles.css
@@ -185,6 +185,10 @@ table tbody tr:nth-child(even) {
   background-color: #f6f8fa;
 }
 
+ul {
+  padding: 0;
+}
+
 ol li {
   position: relative;
   left: 2.2em;
@@ -279,8 +283,11 @@ summary {
   left: 0em;
 }
 
+#sidebar ul li ul {
+  padding-left: 1.3em;
+}
+
 #sidebar ul li ul li {
-  left: 1.2em;
   margin-top: 0em;
   width: 88%;
 }
